services/image-sam/kubernetes/image-sam.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-sam-stateful
  labels:
    app: image-sam
spec:
  serviceName: image-sam
  replicas: 1
  selector:
    matchLabels:
      app: image-sam
  template:
    metadata:
      labels:
        app: image-sam
    spec:
      containers:
        - name: image-sam
          image: ghcr.io/csia-pme/csia-pme-image-sam:latest
          # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
          imagePullPolicy: Always
          resources:
            requests:
              tencent.com/vcuda-core: 20
              tencent.com/vcuda-memory: 8
            limits:
              tencent.com/vcuda-core: 20
              tencent.com/vcuda-memory: 8
          ports:
            - name: http
              containerPort: 80
