services/image-sam/kubernetes/image-sam.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-sam-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8787
      targetPort: 80
      protocol: TCP
  selector:
    app: image-sam
